🐛 bugfix : url /api 제거

--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -15,8 +15,8 @@
             <a class="topbar-link" href="#" onclick="refreshPage()"><span>To</span></a>
             <a class="topbar-link" href="#" onclick="refreshPage()"><span>Study Trek</span></a>
         </nav>
-        <button class="add-task-button" id="adminButton" onclick="location.href='/api/admin'" style="display: none;">ADMIN</button>
-        <button class="add-task-button" id="loginButton" onclick="location.href='/api/auth'">Login</button>
+        <button class="add-task-button" id="adminButton" onclick="location.href='/admin'" style="display: none;">ADMIN</button>
+        <button class="add-task-button" id="loginButton" onclick="location.href='/auth'">Login</button>
     </div>
 </div>
 </body>
