--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,22 +7,22 @@
 <div th:fragment="sidebar(isSidebarOpen, isDarkMode)">
     <div class="sidebar" th:classappend="${isSidebarOpen} ? '' : 'closed'">
         <nav class="sidebar-menu">
-            <a class="sidebar-link" th:href="@{/api/home}">
+            <a class="sidebar-link" th:href="@{/home}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Home</span>
             </a>
-            <a class="sidebar-link" th:href="@{/api/profile}">
+            <a class="sidebar-link" th:href="@{/profile}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Profile</span>
             </a>
-            <a class="sidebar-link" th:href="@{/api/question}">
+            <a class="sidebar-link" th:href="@{/question}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Question</span>
             </a>
-            <a class="sidebar-link" th:href="@{/api/review}">
+            <a class="sidebar-link" th:href="@{/review}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Review</span>
             </a>
-            <a class="sidebar-link" th:href="@{/api/camp}">
+            <a class="sidebar-link" th:href="@{/camp}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Camp</span>
             </a>
-            <a class="sidebar-link" th:href="@{/api/study/main}">
+            <a class="sidebar-link" th:href="@{/study/main}">
                 <img th:src="@{/images/icon-board.svg}" alt="icon" /><span>Study</span>
             </a>
         </nav>
