🩹 fix  : Profile 백엔드 프론트 연동중

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -31,82 +31,7 @@
                     <button class="register-button" id="openModal">등록</button>
                 </div>
                 <div class="section-divider"></div>
-                <div class="card">
-                    <div class="card-header">
-                        <div class="card-title">코드스테이츠</div>
-                        <div class="card-actions">
-                            <button class="edit-button" data-bootcamp="코드스테이츠" data-track="프론트엔드" data-generation="47기" data-start-date="2023-01-01" data-end-date="2023-06-30" data-tech-stack="HTML,CSS,JavaScript,React,Node.js,Express,MongoDB">수정</button>
-                            <button class="delete-button">삭제</button>
-                        </div>
-                    </div>
-                    <div class="card-content">
-                        <div class="info-column">
-                            <table class="info-table">
-                                <tr>
-                                    <td>트랙</td>
-                                    <td>프론트엔드</td>
-                                </tr>
-                                <tr>
-                                    <td>기수</td>
-                                    <td>47기</td>
-                                </tr>
-                                <tr>
-                                    <td>참여 기간</td>
-                                    <td>2023.01 - 2023.06</td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="tech-stack-column">
-                            <div class="column-title">기술 스택</div>
-                            <div class="skill-container">
-                                <span class="skill">HTML</span>
-                                <span class="skill">CSS</span>
-                                <span class="skill">JavaScript</span>
-                                <span class="skill">React</span>
-                                <span class="skill">Node.js</span>
-                                <span class="skill">Express</span>
-                                <span class="skill">MongoDB</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-header">
-                        <div class="card-title">패스트캠퍼스</div>
-                        <div class="card-actions">
-                            <button class="edit-button" data-bootcamp="패스트캠퍼스" data-track="백엔드" data-generation="23기" data-start-date="2022-07-01" data-end-date="2022-12-31" data-tech-stack="Java,Spring,MySQL,AWS">수정</button>
-                            <button class="delete-button">삭제</button>
-                        </div>
-                    </div>
-                    <div class="card-content">
-                        <div class="info-column">
-                            <table class="info-table">
-                                <tr>
-                                    <td>트랙</td>
-                                    <td>백엔드</td>
-                                </tr>
-                                <tr>
-                                    <td>기수</td>
-                                    <td>23기</td>
-                                </tr>
-                                <tr>
-                                    <td>참여 기간</td>
-                                    <td>2022.07 - 2022.12</td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="tech-stack-column">
-                            <div class="column-title">기술 스택</div>
-                            <div class="skill-container">
-                                <span class="skill">Java</span>
-                                <span class="skill">Spring</span>
-                                <span class="skill">MySQL</span>
-                                <span class="skill">AWS</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="cards-container"></div>
             </div>
 
             <div class="content-container">
