--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -31,8 +31,7 @@ body {
 }
 
 .profile-container {
-    width: 100%;
-    max-width: 800px;
+    width: 800px;
     background-color: var(--sidebar-bg);
     border-radius: 10px;
     overflow: hidden;
