✨ update - #6 리뷰 전체 조회, 단건 조회 프론트 연동

--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="author">- Mike T.</div>
                 <div class="actions">
-                    <a th:href="@{/api/review}" class="btn">목록으로 가기</a>
+                    <a th:href="@{/review}" class="btn">목록으로 가기</a>
                     <div>
                         <button class="btn btn-edit" onclick="showEditForm()">수정</button>
                     </div>
