✨ update - #6 비로그인 시 작성 페이지 이동 불가

--- a/src/main/resources/templates/review/reviewMain.html
+++ b/src/main/resources/templates/review/reviewMain.html
@@ -33,7 +33,7 @@
                         <h2>Write a Review</h2>
                         <p>Share your experience with others</p>
                     </div>
-                    <button class="write-review-button learn-more" onclick="addReview()" th:review-add-url="@{/api/review/add}">Start a Review</button>
+                    <button class="write-review-button learn-more" onclick="addReview()" th:review-add-url="@{/review/add}">Start a Review</button>
                 </div>
             </div>
         </div>
