✨ update - #6 삭제 버튼 추가, 리뷰 수정,삭제 기능 프론트 연동

--- a/src/main/resources/static/css/review/reviewDetail.css
+++ b/src/main/resources/static/css/review/reviewDetail.css
@@ -127,6 +127,13 @@ button.btn.btn-edit {
 button.btn.btn-edit:hover {
     background-color: #5AA9E6;
 }
+button.btn.btn-del {
+    color: var(--color);
+    background-color: #FF6B35;
+}
+button.btn.btn-del:hover {
+    background-color: #e5683b;
+}
 
 .comments-section {
     margin-top: 2rem;
