--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -103,15 +103,7 @@
                     <div class="form-group">
                         <label for="editContent">내용</label>
                         <div class="form-description">리뷰의 내용을 입력하세요.</div>
-                        <textarea id="editContent" required>Pine Valley Campground에서 정말 멋진 시간을 보냈습니다. 이 캠핑장의 가장 큰 장점은 단연 친절한 직원들입니다. 도착했을 때부터 떠날 때까지 모든 직원들이 매우 상냥하고 도움을 주려고 노력했습니다.
-
-            시설도 매우 잘 관리되어 있었습니다. 화장실과 샤워 시설이 깨끗했고, 캠핑 구역도 잘 정돈되어 있었습니다. 각 사이트마다 충분한 공간이 있어서 프라이버시도 보장되었죠.
-
-            주변 하이킹 트레일도 정말 훌륭했습니다. 캠핑장 직원들이 추천해준 트레일을 따라 걸었는데, 멋진 경치와 함께 적당한 난이도여서 매우 만족스러웠습니다. 숲속을 걸으며 신선한 공기를 마시는 것만으로도 도시의 스트레스를 모두 날려버릴 수 있었습니다.
-
-            저녁에는 캠프파이어를 즐겼는데, 이 또한 잊지 못할 경험이었습니다. 별이 가득한 하늘 아래에서 marshmallow를 구워 먹으며 가족들과 이야기를 나누는 시간이 정말 소중했습니다.
-
-            전반적으로, Pine Valley Campground는 가족 여행이나 친구들과의 아웃도어 활동을 위한 완벽한 장소입니다. 친절한 직원들, 잘 관리된 시설, 아름다운 자연 환경이 어우러져 최고의 캠핑 경험을 선사합니다. 다음에 또 방문하고 싶은 곳이에요!</textarea>
+                        <textarea id="editContent" required></textarea>
                     </div>
                     <div class="edit-form-buttons">
                         <button type="button" class="editMode-cancel" onclick="cancelEdit()">취소</button>
