✨ update - #7 부트캠프 모집글 전체 조회 연동

--- a/src/main/resources/templates/recruitment/recruitmentMain.html
+++ b/src/main/resources/templates/recruitment/recruitmentMain.html
@@ -83,7 +83,7 @@
                 <button class="sort-button" data-sort="likes">좋아요순</button>
                 <button class="sort-button" data-sort="deadline">마감임박</button>
             </div>
-            <div class="courses">
+            <div class="courses"id="courses-container">
                 <div class="course" data-id="1">
                     <div class="course-image" style="background-image: url('https://example.com/coding1.jpg');"></div>
                     <div class="course-info">
