✨ update - #7 모집글 메인 > 상세 페이지로 이동

--- a/src/main/resources/templates/recruitment/recruitmentMain.html
+++ b/src/main/resources/templates/recruitment/recruitmentMain.html
@@ -75,7 +75,7 @@
                     <h2>Write a Review</h2>
                     <p>Share your experience with others.</p>
                 </div>
-                <button class="start-review-btn" onclick="startReview()" th:camp-add="@{/camp/add}">START A REVIEW</button>
+                <button class="start-review-btn" onclick="addReview()" th:camp-add="@{/camp/add}">START A REVIEW</button>
             </div>
             <div class="sort-buttons">
                 <button class="sort-button" data-sort="views">조회순</button>
