✨ update - #7 모집글 수정 연동 (일부 기능 안됨)

--- a/src/main/resources/templates/recruitment/recruitmentDetail.html
+++ b/src/main/resources/templates/recruitment/recruitmentDetail.html
@@ -78,29 +78,28 @@
                                 <h5>수업 방식</h5>
                                 <select id="classTypeSelect">
                                     <option value="">선택하세요</option>
-                                    <option value="온라인">온라인</option>
-                                    <option value="오프라인">오프라인</option>
-                                    <option value="혼합">혼합</option>
+                                    <option class="tag" value="온라인">온라인</option>
+                                    <option class="tag" value="오프라인">오프라인</option>
                                 </select>
                             </div>
                             <div class="category-group">
                                 <h5>비용</h5>
                                 <select id="costTypeSelect">
                                     <option value="">선택하세요</option>
-                                    <option value="국비">국비</option>
-                                    <option value="유료">유료</option>
-                                    <option value="무료">무료</option>
+                                    <option class="tag" value="국비">국비</option>
+                                    <option class="tag" value="유료">유료</option>
+                                    <option class="tag" value="무료">무료</option>
                                 </select>
                             </div>
                             <div class="category-group">
                                 <h5>학습 분야</h5>
                                 <select id="fieldTypeSelect">
                                     <option value="">선택하세요</option>
-                                    <option value="풀스택">풀스택</option>
-                                    <option value="프론트엔드">프론트엔드</option>
-                                    <option value="백엔드">백엔드</option>
-                                    <option value="데이터사이언스">데이터사이언스</option>
-                                    <option value="인공지능">인공지능</option>
+                                    <option class="tag" value="풀스택">풀스택</option>
+                                    <option class="tag" value="프론트엔드">프론트엔드</option>
+                                    <option class="tag" value="백엔드">백엔드</option>
+                                    <option class="tag" value="데이터사이언스">데이터사이언스</option>
+                                    <option class="tag" value="인공지능">인공지능</option>
                                 </select>
                             </div>
                             <div id="selectedCategories"></div>
