✨ update - #7 모집글 상세 페이지에 모집기간 추가

--- a/src/main/resources/templates/recruitment/recruitmentDetail.html
+++ b/src/main/resources/templates/recruitment/recruitmentDetail.html
@@ -56,7 +56,9 @@
                 <div class="course-sidebar">
                     <div class="sidebar-section">
                         <h4>과정 정보</h4>
-                        <p class="non-editable">기간: 2024/08/26 ~ 2024/09/26</p>
+                        <p class="non-editable recruit">모집 기간: 2024/08/26 ~ 2024/09/26</p>
+                        <input type="text" class="editable recruit date-range" value="2024-08-26 to 2024-09-26">
+                        <p class="non-editable">참여 기간: 2024/08/26 ~ 2024/09/26</p>
                         <input type="text" class="editable date-range" value="2024-08-26 to 2024-09-26">
                         <p class="non-editable class-time">수업 시간: 월-금 09:00-18:00</p>
                         <input type="text" class="editable class-time" value="월-금 09:00-18:00">
