✨ update  : #48 상세 필터 기능에 따른 관련 HTML, JS 업데이트

--- a/src/main/resources/templates/fragments/ranktopsearch.html
+++ b/src/main/resources/templates/fragments/ranktopsearch.html
@@ -31,7 +31,7 @@
 
     <div id="filterContainer" class="filter-container">
         <div class="filter-section collapsed">
-            <h3 onclick="toggleSection(this)">카테고리</h3>
+            <h3 onclick="toggleSection(this)">트랙</h3>
             <div class="filter-options">
                 <span class="filter-option" onclick="toggleFilter(this)">프론트엔드</span>
                 <span class="filter-option" onclick="toggleFilter(this)">백엔드</span>
