✨ update - #58 모집글 메인페이지에 캘린더 이동 버튼 추가

--- a/src/main/resources/static/css/recruitment/recruitmentMain.css
+++ b/src/main/resources/static/css/recruitment/recruitmentMain.css
@@ -59,6 +59,20 @@ body.dark {
 .start-review-btn:hover {
     background-color: #5AA9E6;
 }
+.show-calendar-btn {
+    background-color: #FFE45E;
+    color: var(--color);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+    font-weight: bold;
+}
+.show-calendar-btn:hover {
+    background-color: #dec95d;
+}
 .search-bar {
     display: flex;
     align-items: center;
