--- a/src/main/resources/templates/recruitment/recruitmentMain.html
+++ b/src/main/resources/templates/recruitment/recruitmentMain.html
@@ -72,10 +72,17 @@
             </div>
             <div class="review-section">
                 <div>
-                    <h2>Write a Review</h2>
+                    <h2>캘린더 보러 가기</h2>
                     <p>Share your experience with others.</p>
                 </div>
-                <button class="start-review-btn" onclick="addReview()" th:camp-add="@{/camp/add}">START A REVIEW</button>
+                <button class="show-calendar-btn" onclick="showCalendar()" th:show-calendar="@{/calendar}">GO CALENDAR</button>
+            </div>
+            <div class="review-section">
+                <div>
+                    <h2>모집글 작성하러 가기</h2>
+                    <p>Share your experience with others.</p>
+                </div>
+                <button class="start-review-btn" onclick="addReview()" th:camp-add="@{/camp/add}">START A POST</button>
             </div>
             <div class="sort-buttons">
                 <button class="sort-button" data-sort="views">조회순</button>
