🩹 fix - #58 일정 이동 불가능 하도록 설정

--- a/src/main/resources/templates/calendar/multimonth-view.html
+++ b/src/main/resources/templates/calendar/multimonth-view.html
@@ -54,7 +54,7 @@
       },
       initialView: 'dayGridMonth',  // 디폴트 화면
       initialDate: getCurrentDate(), // 현재 날짜 설정
-      editable: true,
+      editable: false,
       selectable: true,
       locale: 'ko',
       dayMaxEvents: true, // allow "more" link when too many events
