--- a/src/main/resources/static/css/rank/Rank.css
+++ b/src/main/resources/static/css/rank/Rank.css
@@ -154,21 +154,46 @@ body {
 .pagination {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: 20px;
-    gap: 10px;
 }
-
 .pagination button {
-    padding: 5px 10px;
-    border: 1px solid #ddd;
-    background-color: var(--sidebar-bg);
+    background-color: #7FC8F8;
+    width: 90px;
+    color: var(--color);
+    border: none;
+    padding: 10px 15px;
+    margin: 0 5px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
-
-/*.pagination button.active {*/
-/*    background-color: #007bff;*/
-/*    color: white;*/
-/*}*/
+.pagination button:hover:not(:disabled) {
+    background-color: #5AA9E6;
+}
+.pagination button:disabled {
+    background-color: var(--sidebar-bg);
+    cursor: not-allowed;
+}
+.page-numbers {
+    display: flex;
+    margin: 0 10px;
+}
+.page-number {
+    padding: 5px 10px;
+    margin: 0 2px;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: var(--sidebar-bg);
+    color: var(--color);
+    font-weight: bold;
+    transition: background-color 0.3s, color 0.3s;
+}
+.page-number:hover:not(.active) {
+    background-color: #5AA9E6;
+}
+.page-number.active {
+    background-color: #7FC8F8;
+}
 
 
 .categories {
